--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-input-mask": "^2.0.4"
+    "react-imask": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
