--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify/react": "^6.0.0",
     "@next/font": "^14.2.15",
     "antd": "^5.25.3",
+    "antd-mask-input": "^2.0.7",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
