--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "antd-mask-input": "^2.0.7",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-imask": "^7.6.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
