--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
     "@iconify/react": "^6.0.0",
-    "@next/font": "^14.2.15",
     "@tanstack/react-query": "^5.79.0",
     "antd": "^5.25.3",
     "antd-mask-input": "^2.0.7",
     "axios": "^1.9.0",
     "next": "15.3.2",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
