--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H test.bazresi.ir -p 3000 --turbopack --experimental-https",
+    "dev": "next dev -H test.bazresi.ir -p 3000 --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
